--- a/Projeto Fintech - RM 558567/atvCap9.html
+++ b/Projeto Fintech - RM 558567/atvCap9.html
@@ -18,7 +18,7 @@
     
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="navbar-brand h1 fs-1">FINTECH</a>
+          <a class="navbar-brand h1 fs-1">FINTECH PARREIRA</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span id="menubottom" class="navbar-toggler-icon"></span>
             </button>
